kubernetes/fluxcd/repositories/example-app-1/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app-1
  labels:
    app: example-app-1
  namespace: default
spec:
  selector:
    matchLabels:
      app: example-app-1
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: example-app-1
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: example-app-1
          image: pavlmark/example-app-1:ccf3fc5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: config-volume
              mountPath: /configs/
            - name: test-volume
              mountPath: /data
      volumes:
        - name: config-volume
          configMap:
            name: example-app-1
        - name: test-volume
          persistentVolumeClaim:
            claimName: app-nfs-pvc
