kubernetes/fluxcd/repositories/example-app-1/deploy/teeeeeest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: teeeeeest
  name: teeeeeest
spec:
  replicas: 5
  selector:
    matchLabels:
      app: teeeeeest
  strategy: {}
  template:
    metadata:
      labels:
        app: teeeeeest
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
