kubernetes/fluxcd/repositories/example-app-1/deploy/example-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app-svc
spec:  
  selector:
    app: example-app-1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
