kubernetes/fluxcd/repositories/example-app-1/deploy/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app-1
  namespace: default
spec:
  selector:
    app: example-app-1
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
    nodePort: 30080
