kubernetes/fluxcd/repositories/example-app-1/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: example-app-1
  labels:
    app: example-app-1
spec:
  type: ClusterIP
  selector:
    app: example-app-1
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
