kubernetes/fluxcd/repositories/example-app-1/deploy/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-app-1-httproute
spec:
  parentRefs:
  - name: gateway-api
    sectionName: http
    kind: Gateway

  hostnames:
  - "pavlmark-it.com"
  
  rules:
  - backendRefs:
    - name: example-app-svc
      port: 5000
      weight: 1
